--- a/src/main/webapp/prove/newLayout.html
+++ b/src/main/webapp/prove/newLayout.html
@@ -49,7 +49,7 @@ and open the template in the editor.
             </div>
 
             <div class="row ">
-                <div class="col-md-10 col-md-push-1 main">
+                <div class="col-md-8 col-md-push-3 main">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="row">
@@ -86,6 +86,13 @@ and open the template in the editor.
                             </p>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-2 col-md-pull-7">
+                    <ul class="nav nav-pills nav-stacked" role="tablist">
+                        <li role="presentation" class="active"><a href="#">Home</a></li>
+                        <li role="presentation"><a href="#">Profile</a></li>
+                        <li role="presentation"><a href="#">Messages</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="row">
