--- a/src/main/webapp/newjsf.xhtml
+++ b/src/main/webapp/newjsf.xhtml
@@ -1,12 +1,20 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">   
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        
+    <p:dataTable value="#{processoManager.processi}" var="c">
+      <p:column>
+          <h:outputText value="#{c.idProcesso}" />
+      </p:column>
+      <p:column>
+          <h:outputText value="#{c.idProcesso}" />
+      </p:column>
+   </p:dataTable>
     </h:body>
 </html>
 
